bin_PROGRAMS = apnspusher
apnspusher_SOURCES = \
                     App.cpp \
                     APNS.cpp \
                     DBI.cpp \
                     main.cpp \
                     MemcachedController.cpp \
                     Store.cpp \
                     Worker.cpp

apnspusher_LDFLAGS=-export-dynamic -lmysqlpp -lssl
